More docs and more css tuning

--- a/public/stylesheets/_woof_ug.css
+++ b/public/stylesheets/_woof_ug.css
@@ -22,8 +22,10 @@
    text-align: center;
 }
 
-.wf_code {
+code, .wf_code {
    font-family: "Courier New", Courier, monospace;
    font-size: 83%;
 }
+
+
 
