More docs and more formatting tuning

--- a/public/stylesheets/_woof_ug.css
+++ b/public/stylesheets/_woof_ug.css
@@ -1,7 +1,7 @@
 /* Woof User Guide CSS - assumes _woof.css loaded */
 .wf_console_session {
    margin: 10px 30px;
-   font-size: 83%;
+   font-size: 85%;
    font-family: "Courier New", Courier, monospace;
    background-color: #cccccc;
    padding: 2px;
@@ -9,12 +9,12 @@
 }
 
 .wf_filename {
-   font-size: 83%;
+   font-size: 93%;
    font-family: "Courier New", Courier, monospace;
 }
 
 .wf_demotext {
-   font-size: 83%;
+   font-size: 93%;
    font-family: "Courier New", Courier, monospace;
 }
 
@@ -24,8 +24,10 @@
 
 code, .wf_code {
    font-family: "Courier New", Courier, monospace;
-   font-size: 83%;
+   font-size: 93%;
 }
 
-
+h4 .wf_code {
+   font-size: 100%;
+}
 
