--- a/public/stylesheets/_woof_ug.css
+++ b/public/stylesheets/_woof_ug.css
@@ -1,4 +1,10 @@
 /* Woof User Guide CSS - assumes _woof.css loaded */
+
+#bd .yui-g h2 {
+  border-bottom: thin solid #cccccc;
+}
+
+
 .wf_console_session {
    margin: 10px 30px;
    font-size: 85%;
