--- a/public/stylesheets/_layout.css
+++ b/public/stylesheets/_layout.css
@@ -4,12 +4,19 @@ html, button, input, select, textarea,
     font-family: Georgia, Times, "Times New Roman", serif;
 }
 
+/*
+ * The following is *required* for grids to work properly when padding
+ * is added directly to pure-u units.
+ */
 .pure-g > div {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-.wf_box {
+.wf_main, .wf_sidebar, .wf_supplement {
     padding: 0.5em;
+}
+
+.wf_header, .wf_footer {
 }
