--- a/public/stylesheets/_woof.css
+++ b/public/stylesheets/_woof.css
@@ -1,105 +1,44 @@
 /* Woof default CSS */
 
-/* Assumes YUI reset-font-grids and base-min loaded */
-
-.pure-menu.pure-menu-open {
-    border-width: 0;
-    background-color: #006666;
-}
-
-.pure-menu .pure-menu-heading, .pure-menu a {
-    color: #E99A56;
-}
-
-.wf_nav {
-    background-color: #006666;
-}
-
 /* FYI - The Woof logo main color is #E99A56 */
 
-h1,h2 {
-  color: #888888;
-  margin-bottom: 0.5em;
-}
-
-h3,h4 {
-  color: #777777;
-  margin-bottom: 0.5em;
-}
-
-h4 {
-  font-size: 93%;
-}
-
-table {
-  margin: 1em;
-  border: thin solid;
-  border-collapse: collapse;
-  border-color: #808080;
-  padding: 4;
-}
-
-td {
-  border: thin solid;
-  border-color: #808080;
-  vertical-align: top;
-  font-size: 93%;
-}
-
-th {
-  border: thin solid;
-  border-color: #808080;
-  padding: 4px;
-  background-color: #CCCCCC;
-}
-
-dt, dd {
-   font-size: 93%;
-}
-
-footer {
-    font-size: 77%;
-    text-align: center;
-    border-top: 1px solid #aaaaaa;
-    /* margin-right: 180px; */
-    margin-top: 10px;
-}
-
-header .wf_banner {
-    font-family: Trebuchet MS, Helvetica, sans-serif;
+.wf_header {
     font-weight: bold;
     height: 48px;
+    color: white;
     background-color: #006666; 
     background-position: 20px 20px;
     padding: 20px;
     background-image: url(../images/_woof/logo.png);
     background-repeat: no-repeat;
     text-indent: 100px;
+    color: #E99A56;
 }
 
-.wf_banner h2 {
-    color: #E99A56;
+.wf_header h2, .wf_header h3 {
     margin: 0px;
 }
 
-.wf_banner h3 {
+.wf_sidebar .pure-menu.pure-menu-open {
+    border-width: 0;
+    background-color: #006666;
+}
+
+.wf_sidebar .pure-menu .pure-menu-heading, .wf_sidebar .pure-menu a {
     color: #E99A56;
-    margin: 0px;
 }
 
-
-#bd {
-  font-family: Verdana;
-  font-size: 108%;
-  margin-top: 10px;
+.wf_sidebar {
+    background-color: #006666;
 }
 
-#bd h2.wf_first {
-  margin-top: 0px;
-  padding-top: 0px;
+.wf_main h1, .wf_main h2 {
+    color: #888888;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
 
-.wf_linkbox h2 {
+.wf_supplement h2 {
   color: #177f75; /* #21b6a8; */
   margin-bottom: 0.2em;
   /* margin-top: 1.5em; */
@@ -107,20 +46,20 @@ header .wf_banner {
   font-size: 93%;
 }
 
-.wf_linkbox {
+.wf_supplement {
   font-size: 93%;
 }
 
-.wf_linkbox ul {
+.wf_supplement ul {
   margin-top: 0em;
   padding-left: 1em;
 }
 
-.wf_linkbox ul li {
+.wf_supplement ul li {
   list-style: none;
 }
 
-.wf_linkbox a {
+.wf_supplement a {
   color: #177f75;
   text-decoration: none;
 }
@@ -129,104 +68,9 @@ header .wf_banner {
   font-weight: bold;
 }
 
-div.wf_navbox {
-  /* margin-top: 1em; */
-  margin-bottom: 20px;
-  padding-left: 1em;
-  padding-right: 1em
-}
+/* XXX */
 
-.wf_navbox {
-  font-size: 77%;
-}
-
-.wf_hnavbox {
-  font-size: 93%;
-}
-
-.wf_navbox h2 {
-  margin-bottom: 0.2em;
-  margin-top: 0em;
-  color: white;
-  font-size: 100%;
-}
-
-.wf_navbox ul, .wf_hnavbox ul {
-  margin-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 1em;
-}
-
-.wf_navbox li, .wf_hnavbox li {
-  list-style-type: none;
-  /* list-style-image: url(../images/_woof/navarrowright.png); */
-  font-weight: bold;
-  color: #e99a56;
-}
-
-.wf_navbox a:link, .wf_navbox a:visited {
-  text-decoration: none;
-  font-weight: normal;
-}
-
-.wf_nav .wf_navbox a:link, .wf_nav .wf_navbox a:visited {
-  color: white;
-}
-
-.wf_navbox a:link, .wf_navbox a:visited {
-  color: #808080;
-  font-size: 100%;
-}
-
-.wf_navbox a:hover {
-  /* font-weight: bold; */
-  /* text-decoration: underline; */
-  color: #e99a56;
-}
-
-.wf_hnavbox {
-  padding-bottom:0.5em;
-  text-align:center;
-  display: block;
-}
-
-.wf_hnavbox a:link, .wf_hnavbox a:visited {
-  text-decoration: none;
-  font-size: 93%;
-  font-weight: normal;
-  color: #808080;
-}
-
-.wf_top_border {
-  border-top:1px solid #aaaaaa;
-  padding-top:
-}
-
-.wf_bottom_border {
-  border-bottom:1px solid #aaaaaa;
-}
-
-.wf_hnavbox .leftmost {
-  display: block;
-  float: left;
-  text-align: left;
-  background-image: url(../images/_woof/navarrowleft.png);
-  background-position: left center;
-  background-repeat: no-repeat;
-  padding-left: 15px; /* So image does not overlap */
-}
-
-.wf_hnavbox .rightmost {
-  display: block;
-  float: right;
-  text-align: right;
-  background-image: url(../images/_woof/navarrowright.png);
-  background-position: right center;
-  background-repeat: no-repeat;
-  padding-right: 15px; /* So image does not overlap */
-}
-
+/* pure-skin-woof */
 body {
     background-color: #ffffff;
 }
