--- a/public/stylesheets/_layout.css
+++ b/public/stylesheets/_layout.css
@@ -1,7 +1,6 @@
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
-    /* Set your content font stack here: */
-    font-family: Georgia, Times, "Times New Roman", serif;
+    /* Placeholder if we want to set our content font stack */
 }
 
 /*
@@ -15,8 +14,10 @@ html, button, input, select, textarea,
 }
 
 .wf_main, .wf_sidebar, .wf_supplement {
-    padding: 0.5em;
+    padding: 1em;
 }
 
 .wf_header, .wf_footer {
+    /* Placeholder for any default header/footer settings */
 }
+
