Documented some template processing plugins

--- a/public/stylesheets/_woof_ug.css
+++ b/public/stylesheets/_woof_ug.css
@@ -200,3 +200,8 @@ ul.ug-nobullets li {
 .wf_main tbody {
     vertical-align: top;
 }
+
+.ug-note {
+    font-style: italic;
+    font-size: smaller;
+}
