--- a/public/stylesheets/_layout.css
+++ b/public/stylesheets/_layout.css
@@ -7,17 +7,16 @@ html, button, input, select, textarea,
  * The following is *required* for grids to work properly when padding
  * is added directly to pure-u units.
  */
-.pure-g > div, .pure-g > aside, .pure-g > nav, .pure-g > main {
+.pure-g > div, .pure-g > .wf-main, .pure-g > .wf-sidebar, .pure-g > .wf-supplement {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-.wf_main, .wf_sidebar, .wf_supplement {
+.wf-main, .wf-sidebar, .wf-supplement {
     padding: 1em;
 }
 
-.wf_header, .wf_footer {
+.wf-header, .wf-footer {
     /* Placeholder for any default header/footer settings */
 }
-
