--- a/public/stylesheets/_woof_ug.css
+++ b/public/stylesheets/_woof_ug.css
@@ -211,6 +211,12 @@ ul.ug-nobullets li {
    line-height: 1.2em;
 }
 
+.ug-sample {
+    margin: 2em 2em;
+    border: thin solid grey;
+    padding-left: 5px;
+}
+
 .wf-main tbody {
     vertical-align: top;
 }
